--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.mutualmobile.praxis">
 
-  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.INTERNET" />
 
   <application
       android:name=".BaseApplication"
@@ -14,19 +14,25 @@
       android:theme="@style/AppTheme"
       tools:ignore="GoogleAppIndexingWarning">
 
-    <!-- Required if using Maps -->
-    <uses-library android:name="org.apache.http.legacy" android:required="false" />
-
-    <activity
-        android:name=".ui.home.HomeActivity">
+    <service android:name=".manager.PushNotificationService">
       <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
+        <action android:name="com.google.firebase.MESSAGING_EVENT" />
+      </intent-filter>
+    </service>
+    <!-- Required if using Maps -->
+    <uses-library
+        android:name="org.apache.http.legacy"
+        android:required="false" />
 
-        <category android:name="android.intent.category.LAUNCHER"/>
+    <activity android:name=".ui.home.HomeActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+
+        <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
 
-    <activity android:name=".ui.joke.ShowJokeActivity"/>
+    <activity android:name=".ui.joke.ShowJokeActivity" />
   </application>
 
 </manifest>
